Commment Feature Added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,11 @@
             "--extensionDevelopmentPath=${workspaceFolder}"
           ]
         }
-    ]
+    ],
+    "files.associations": {
+      "*.html": "django-html",
+      "iostream": "cpp"
+    }
 
     
 }
